[build-system]
requires = [
    "hatchling>=1.6",
]
build-backend = "hatchling.build"

[project]
name = "highcharts-stock"
description = "High-end Time Series Data Visualization for the Python Ecosystem"
readme = "README.rst"
license-files = { paths = ["LICENSE"] }

dynamic = [
     "version"
]

authors = [
    { name = "HCP LLC", email = "support@highchartspython.com" }
]

keywords = [
    "highcharts",
    "data visualization",
    "data viz",
    "charts",
    "graphing",
    "highcharts stock",
    "plotting",
    "time series",
    "asset price",
    "financial"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",

    "Framework :: Jupyter",

    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",

    "License :: Other/Proprietary License"
]

requires-python = ">= 3.10"
dependencies = [
    "highcharts-core>=1.7.0",
    "esprima>=4.0.1",
    "validator-collection>=1.5.0",
    "requests>=2.31.0"
]

[tool.hatch.version]
path = "highcharts_stock/__version__.py"

[project.urls]
"Homepage" = "https://www.highchartspython.com"
"Documentation" = "https://stock-docs.highchartspython.com/en/latest/"
"Support" = "https://www.highchartspython.com/get-help"
"Source Code" = "https://github.com/highcharts-for-python/highcharts-stock"
"History" = "https://github.com/highcharts-for-python/highcharts-stock/blob/master/CHANGES.rst"
"Bug Tracker" = "https://github.com/highcharts-for-python/highcharts-stock/issues"
"Demo" = "https://github.com/highcharts-for-python/highcharts-for-python-demos"
"Sponsor" = "https://github.com/sponsors/highcharts-for-python"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.2",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=2.5.0",
    "python-dotenv>=1.0.0",
    "pytz>=2022.1",
    "Sphinx==6.1.3",
    "sphinx-rtd-theme==1.2.0",
    "sphinx-toolbox==3.4.0",
    "sphinx-tabs==3.4.1",
    "tox>=4.0.0",
    "IPython>=8.10.0",
    "pyspark>=3.3.0",
    "pandas>=1.3.3",
    "orjson>=3.7.7",
    "anthropic>=0.3.11",
    "dill>=0.3.7",
    "openai>=0.28.0"
]
soft = [
    "IPython>=8.10.0",
    "pyspark>=3.3.0",
    "pandas>=1.3.3",
    "orjson>=3.7.7",
    "anthropic>=0.3.11",
    "dill>=0.3.7",
    "openai>=0.28.0"
]
docs = [
    "Sphinx==6.1.3",
    "sphinx-rtd-theme==1.2.0",
    "sphinx-toolbox==3.4.0",
    "sphinx-tabs==3.4.1"
]